Updates README, concept, WIP making db relational

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Job Board</title>
+    <title>The Criteria Channel</title>
   </head>
   <body>
     <div id="root"></div>
